removed the PMD
SVN-Revision: 25985